--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="portfolio-layer">
                     <h4>Yoom Meeting app</h4>
                     <p></p>
-                    <a href="https://yoom-cyan.vercel.app/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://yoom-cyan.vercel.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -102,7 +102,7 @@
                 <div class="portfolio-layer">
                     <h4> Resto </h4>
                     <p>Best Food In The Country</p>
-                    <a href="https://resto-talha-haider.netlify.app/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://resto-talha-haider.netlify.app/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -110,7 +110,7 @@
                 <div class="portfolio-layer">
                     <h4>E-Learning</h4>
                     <p>Is A Better Way Of Learning</p>
-                    <a href="https://talhahaider27.github.io/E-Learning-Website/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://talhahaider27.github.io/E-Learning-Website/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
            
